# advent_of_code

./: .gitignore  pyproject.toml  requirements.txt
2022/: 01.py  02.py  03.py
2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06-visuals.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py
2025/day01/: solution.py
2025/day02/: solution.py
2025/day03/: solution.py
2025/day04/: solution.py
2025/day05/: solution.py
2025/day06/: data.txt  solution.py
2025/day07/: solution.py
2025/day08/: solution.py
2025/day09/: solution.py  solution_no_shapely.py  test_solution_no_shapely.py
2025/day09/visualize/: constants.py  solution.py  video.py
2025/day10/: solution.py
2025/day11/: solution.py
2025/day12/: solution.py
2025/day12/sat_solver_attempt/: solution.py
