[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "cvxpy>=1.6.0",
    "matplotlib>=3.9.3",
    "moviepy>=2.1.1",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
extend-select = ["I"]
extend-unsafe-fixes = ["F401"]
